--- a/ToothFairy/TFTopCell.xib
+++ b/ToothFairy/TFTopCell.xib
@@ -32,22 +32,22 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="578420679">
+			<object class="IBUITableViewCell" id="193489002">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="378987429">
-						<reference key="NSNextResponder" ref="578420679"/>
+					<object class="IBUIView" id="67049183">
+						<reference key="NSNextResponder" ref="193489002"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="261050609">
-								<reference key="NSNextResponder" ref="378987429"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{264, 39}</string>
-								<reference key="NSSuperview" ref="378987429"/>
-								<reference key="NSNextKeyView" ref="461473281"/>
+							<object class="IBUIImageView" id="426238421">
+								<reference key="NSNextResponder" ref="67049183"/>
+								<int key="NSvFlags">256</int>
+								<string key="NSFrameSize">{264, 33}</string>
+								<reference key="NSSuperview" ref="67049183"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="375286533"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -55,11 +55,12 @@
 									<string key="NSResourceName">cellBackground.png</string>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="220110133">
-								<reference key="NSNextResponder" ref="378987429"/>
+							<object class="IBUIImageView" id="486882571">
+								<reference key="NSNextResponder" ref="67049183"/>
 								<int key="NSvFlags">257</int>
-								<string key="NSFrame">{{219, 11}, {20, 20}}</string>
-								<reference key="NSSuperview" ref="378987429"/>
+								<string key="NSFrame">{{219, 5}, {20, 20}}</string>
+								<reference key="NSSuperview" ref="67049183"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -69,12 +70,13 @@
 									<string key="NSResourceName">cellCheckmark.png</string>
 								</object>
 							</object>
-							<object class="IBUILabel" id="709173029">
-								<reference key="NSNextResponder" ref="378987429"/>
+							<object class="IBUILabel" id="375286533">
+								<reference key="NSNextResponder" ref="67049183"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 8}, {196, 34}}</string>
-								<reference key="NSSuperview" ref="378987429"/>
-								<reference key="NSNextKeyView" ref="220110133"/>
+								<string key="NSFrame">{{20, 2}, {196, 34}}</string>
+								<reference key="NSSuperview" ref="67049183"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="486882571"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -85,7 +87,7 @@
 								<object class="NSAttributedString" key="IBUIAttributedText">
 									<string key="NSString">Mississippi</string>
 									<dictionary key="NSAttributes">
-										<object class="NSColor" key="NSColor" id="209263236">
+										<object class="NSColor" key="NSColor" id="308484174">
 											<int key="NSColorSpace">3</int>
 											<bytes key="NSWhite">MQA</bytes>
 										</object>
@@ -99,29 +101,15 @@
 										</object>
 									</dictionary>
 								</object>
-								<reference key="IBUIHighlightedColor" ref="209263236"/>
+								<reference key="IBUIHighlightedColor" ref="308484174"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIImageView" id="461473281">
-								<reference key="NSNextResponder" ref="378987429"/>
-								<int key="NSvFlags">290</int>
-								<string key="NSFrame">{{0, 1}, {264, 4}}</string>
-								<reference key="NSSuperview" ref="378987429"/>
-								<reference key="NSNextKeyView" ref="709173029"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<int key="IBUIContentMode">1</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cellDots.png</string>
-								</object>
-							</object>
 						</array>
-						<string key="NSFrameSize">{264, 38}</string>
-						<reference key="NSSuperview" ref="578420679"/>
-						<reference key="NSNextKeyView" ref="261050609"/>
+						<string key="NSFrameSize">{264, 32}</string>
+						<reference key="NSSuperview" ref="193489002"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="426238421"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -134,13 +122,16 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{264, 39}</string>
+				<string key="NSFrameSize">{264, 33}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="378987429"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="67049183"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
+				<int key="IBUIContentMode">1</int>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="378987429"/>
-				<string key="IBUIReuseIdentifier">TFCell</string>
+				<reference key="IBUIContentView" ref="67049183"/>
+				<bool key="IBUIShouldIndentWhileEditing">NO</bool>
+				<string key="IBUIReuseIdentifier">TFTopCell</string>
 				<real value="40" key="IBUIRowHeight"/>
 			</object>
 		</array>
@@ -148,27 +139,19 @@
 			<array class="NSMutableArray" key="connectionRecords">
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">image</string>
-						<reference key="source" ref="578420679"/>
-						<reference key="destination" ref="220110133"/>
-					</object>
-					<int key="connectionID">23</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">label</string>
-						<reference key="source" ref="578420679"/>
-						<reference key="destination" ref="709173029"/>
+						<reference key="source" ref="193489002"/>
+						<reference key="destination" ref="375286533"/>
 					</object>
-					<int key="connectionID">25</int>
+					<int key="connectionID">9</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">dots</string>
-						<reference key="source" ref="578420679"/>
-						<reference key="destination" ref="461473281"/>
+						<string key="label">image</string>
+						<reference key="source" ref="193489002"/>
+						<reference key="destination" ref="486882571"/>
 					</object>
-					<int key="connectionID">34</int>
+					<int key="connectionID">38</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -192,34 +175,30 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="578420679"/>
+						<reference key="object" ref="193489002"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="261050609"/>
-							<reference ref="709173029"/>
-							<reference ref="220110133"/>
-							<reference ref="461473281"/>
+							<reference ref="486882571"/>
+							<reference ref="375286533"/>
+							<reference ref="426238421"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">21</int>
-						<reference key="object" ref="261050609"/>
-						<reference key="parent" ref="578420679"/>
+						<int key="objectID">5</int>
+						<reference key="object" ref="486882571"/>
+						<array class="NSMutableArray" key="children"/>
+						<reference key="parent" ref="193489002"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">22</int>
-						<reference key="object" ref="220110133"/>
-						<reference key="parent" ref="578420679"/>
+						<int key="objectID">6</int>
+						<reference key="object" ref="375286533"/>
+						<array class="NSMutableArray" key="children"/>
+						<reference key="parent" ref="193489002"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">24</int>
-						<reference key="object" ref="709173029"/>
-						<reference key="parent" ref="578420679"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">33</int>
-						<reference key="object" ref="461473281"/>
-						<reference key="parent" ref="578420679"/>
+						<int key="objectID">7</int>
+						<reference key="object" ref="426238421"/>
+						<reference key="parent" ref="193489002"/>
 					</object>
 				</array>
 			</object>
@@ -227,20 +206,44 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="3.CustomClassName">TFCell</string>
+				<string key="3.CustomClassName">TFTopCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">34</int>
+			<int key="maxID">38</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">TFTopCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="image">UIImageView</string>
+						<string key="label">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="image">
+							<string key="name">image</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="label">
+							<string key="name">label</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TFTopCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
@@ -248,7 +251,6 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="cellBackground.png">{264, 39}</string>
 			<string key="cellCheckmark.png">{20, 19}</string>
-			<string key="cellDots.png">{264, 4}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
